--- a/src/App.css
+++ b/src/App.css
@@ -1,104 +1,178 @@
 *
 {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 .main
 {
-    height: 100vh;
-    width: 100vw;
-    background-color:white;
-
+min-height: 80vh;
+width: 50vw;
+background-color:#fafafa;
+margin: auto;
+margin-top: 50px;
+margin-bottom: 50px;
+padding-bottom: 20px;
 }
 
 .main h1
-{
-    background-color: rgb(78, 24, 128);
-    color: white;
-    text-align: center;
+{   
+background-color:#9c89b8;
+color: white;
+text-align: center;
+padding: 10px;
+
 }
 
 .title-div
 {
-    height: 130px;
-    width: 550px;
-    display: flex;
-    flex-direction: column;
-    flex-basis: 30%;
-    gap: 15px;
-    /* background-color: aqua; */
-    margin: auto;
-    border: 2px solid rgba(71, 70, 70, 0.352);
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15); /* light grey shadow */
+height: 130px;
+width: 90%;
+display: flex;
+flex-direction: column;
+flex-basis: 30%;
+gap: 15px;
+margin: auto;
+border: 2px solid rgba(71, 70, 70, 0.352);
+box-shadow: 0px 4px 10px #dddbf1; 
 
-   
+
 }
 .todo-input
 {
-    width: 90% ;
-    margin: auto;
-    padding: 12px;
-    margin-top: 14px ;
-    border: 2px solid rgba(180, 180, 180, 0.742); 
-   
+  width: 90% ;
+  margin: auto;
+  padding: 12px;
+  margin-top: 14px ;
+  border: 2px solid rgba(180, 180, 180, 0.742); 
+  font-size: 20px;
+  
 }
 .todo-input:focus {
-  outline: none !important;                  
-  border: 2px solid rgba(180, 180, 180, 0.742) !important;        
-  box-shadow: none !important;          
+outline: none !important;                  
+border: 2px solid rgba(180, 180, 180, 0.742) !important;        
+box-shadow: none !important;          
 }
 
 .purple-btn
 {
-    height: 40px;
-    width: 65px;
-    border-radius:2px ;
-    margin: auto;
-    margin-bottom: 6px;
-    background-color:rgb(78, 24, 128);
-    color: white;
+  height: 40px;
+  width: 150px;
+  border-radius:6px ;
+  margin: auto;
+  margin-bottom: 6px;
+  background-color:#9c89b8;
+  color: white;
+  font-size: 20px;
+  border: none;
 }
 .purple-btn:hover
 {
-  background-color: #61269c; 
-  color: white;
-  cursor: pointer;
+border: 2px solid #7b50b3; 
+color: white;
+cursor: pointer;
 }
 
 .outerDiv
 {
-   width: 1170px;
-   margin: auto;
+  width: 90%;
+  margin: auto;
 }
 .outerDiv ul
 {   
-    margin-top: 50px;
-    list-style: none;
+  margin-top: 50px;
+  list-style: none;
+    padding-left: 0px;
 }
 .outerDiv ul li
 {
-    color: black;
-    padding: 10px;
-    font-size: 25px;
-    margin-bottom: 20px;
-    position: relative;
-    text-align: left;
-    background-color:white; 
-    border: 2px solid rgba(71, 70, 70, 0.352);
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15); 
+  color: black;
+  padding: 10px;
+  font-size: 23px;
+  margin-bottom: 20px;
+  position: relative;
+  text-align: left;
+  background-color:white; 
+  border: 2px solid rgba(71, 70, 70, 0.352);
+  box-shadow: 0px 4px 10px #dddbf1; 
 }
 .outerDiv ul li span
 {
-    right: 20px;
-    position: absolute;
-    cursor: pointer;
-    color: red;
+  right: 20px;
+  position: absolute;
+  cursor: pointer;
+  color: #7b50b3;
 }
 .completeTodo
 {
-    text-decoration: line-through;
-    color: black !important;
-    /* background-color: yellow !important; */
+  text-decoration: line-through;
+  color: black !important;
+}
+
+@media (max-width: 1150px) {
+.main {
+  width: 80vw;
+  height: auto;
+  margin-top: 60px;
+  padding-bottom: 20px;
+}
+
+.title-div {
+  width: 90%;
+  height: auto;
+}
+
+.todo-input {
+  width: 85%;
+}
+
+.outerDiv {
+  width: 90%;
+  margin: auto;
+}
+
+.outerDiv ul li {
+  font-size: 20px;
+  padding: 8px;
+}
+}
+
+@media (max-width: 576px) {
+.main {
+  width: 95vw;
+  height: auto;
+  margin-top: 60px;
+  padding-bottom: 20px;
+}
+
+.title-div {
+  width: 90%;
+  padding: 10px;
+}
+
+.todo-input {
+  width: 75%;
+  padding: 10px;
+}
+
+.purple-btn {
+  width: 100px;
+  height: 37px;
+  font-size: 17px;
+}
+
+.outerDiv {
+  width: 90%;
+  height: auto;
+}
+
+.outerDiv ul li {
+  font-size: 18px;
+  padding: 6px;
+}
+
+.outerDiv ul li span {
+  right: 10px;
+}
 }
